--- a/jenkinsfile
+++ b/jenkinsfile
@@ -66,7 +66,7 @@ pipeline {
     post {
         always {
             echo 'slack Notification.'
-            slackSend channel: '#docker-compose-pipeline',
+            slackSend channel: '#ci-cd-pipeline-assignment',
             color: COLOR_MAP [currentBuild.currentResult],
             message: "*${currentBuild.currentResult}:* Job ${env.JOB_NAME} build ${env.BUILD_NUMBER} \n More info at: ${env.BUILD_URl}"
             
